# static-site-generator

./: main.py  pyproject.toml
