[tool.poetry]
name = "cms"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
jinja2 = "^3.1.3"
mistune = "^3.0.2"
pillow = "^10.2.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
